--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,9 +1,7 @@
 <div class="container-fluid">
     <h2>List of Students</h2>
+    <button class='btn btn-primary' ng-click='ctrl.changePath(2)'>Create new</button>
 
-    <p>
-        <a href="#!/create/">Create new</a>
-    </p>
     <table class="table table-striped table-bordered">
         <tr>
             <th>Image</th>
@@ -34,9 +32,9 @@
                 <!-- <button class="btn btn-success mr-2">Update</button>
                 <button class="btn btn-info mr-2">Details</button>
                 <button class="btn btn-danger">Delete</button> -->
-                <a href="#!/update/{{item.Id}}">Update</a> |
-                <a href="#!/details/{{item.Id}}">Details</a> |
-                <a href="#!/delete/{{item.Id}}">Delete</a> |
+                <button class='btn btn-success mr-2' ng-click='ctrl.changePath(2)'>Update</button>
+                <button class='btn btn-info mr-2' ng-click='ctrl.changePath(1)'>Details</button>
+                <button class='btn btn-danger' ng-click='ctrl.changePath(3)'>Delete</button>
             </td>
         </tr>
     </table>
