added api calls.

--- a/app/delete-student/delete-student.template.html
+++ b/app/delete-student/delete-student.template.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
 	<h4>Delete student</h4>
+	<a ng-click="$ctrl.parent.setSelectedStudent(null);$ctrl.parent.changePath(0)">Back to list</a>
 	<hr />
 	<div class="row">
 		<dl class="dl-horizontal">
