--- a/app/student-form/student-form.template.html
+++ b/app/student-form/student-form.template.html
@@ -91,7 +91,14 @@
                     </div>
                 </div>
         
-                <button type="submit" class="btn btn-success">Submit</button>
+                <div>
+                    <button type="button" class="btn btn-danger" 
+                        ng-click="$ctrl.parent.setSelectedStudent(null);$ctrl.parent.changePath(0)">
+                        Cancel
+                    </button>
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+                
                 <!-- <span class="text-danger" style="color:red">{{ error }}</span> -->
             </form>
         </div>
