--- a/app/student-detail/student-detail.template.html
+++ b/app/student-detail/student-detail.template.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<h4>Student details</h4>
-	<a ng-click="$ctrl.parent.setSelectedStudent(null);$ctrl.parent.changePath(0)">Back to list</a>
+	<a ng-click="$ctrl.returnToList()">Back to list</a>
 	<hr />
 	<div class="row">
 		<div class="col-md-8" style="border-right:1px solid #e2f2f8">
