--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <h2>List of Students</h2>
-    <button class='btn btn-primary' style="margin-bottom: 20px" ng-click='$ctrl.parent.changePath(2)'>Create new</button>
+    <button class='btn btn-primary' style="margin-bottom: 20px" ng-click='$ctrl.changePath({flag: 2})'>Create new</button>
 
     <table class="table table-striped table-bordered">
         <tr>
